--- a/css/kasper.css
+++ b/css/kasper.css
@@ -110,7 +110,7 @@ ul {
 }
 
 header {
-  background-image: url("/images/header.png");
+  background-image: url("../images/header.png");
   background-size: cover;
   height: 100vh;
   position: relative;
@@ -344,7 +344,7 @@ header .intro-text p:last-child {
 /* start menu */
 
 .menu {
-  background-image: url("/images/menu.jpg");
+  background-image: url("../images/menu.jpg");
   background-size: 20%;
   background-repeat: repeat;
   min-height: 100vh;
@@ -712,7 +712,7 @@ header .intro-text p:last-child {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("/images/back.jpeg");
+  background-image: url("../images/back.jpeg");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -1155,7 +1155,7 @@ header .intro-text p:last-child {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/images/back.jpg');
+    background-image: url('../images/back.jpg');
     background-size: cover;
     filter: blur(8px);
   }
@@ -1291,7 +1291,7 @@ header .intro-text p:last-child {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/images/mail.jpg');
+  background-image: url('../images/mail.jpg');
   background-repeat: repeat;
   background-size: 200px;
   filter: blur(3px);
